# nwg-dock

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md  sonar-project.properties
data/nwg-dock-hyprland/: config.example.toml  style.css
docs/code-review/: 2026-05-03-comprehensive.md
docs/superpowers/plans/: 2026-04-28-config-file.md
docs/superpowers/specs/: 2026-04-28-config-file-design.md
src/: config.rs  config_file.rs  context.rs  dock_windows.rs  events.rs  listeners.rs  main.rs  monitor.rs  rebuild.rs  state.rs
src/config_file/: hot_reload.rs  load.rs  merge.rs  mod.rs  notify.rs  print.rs  schema.rs  watch.rs
src/ui/: buttons.rs  constants.rs  css.rs  dock_box.rs  dock_menu.rs  drag.rs  launch_bounce.rs  menus.rs  mod.rs  widgets.rs  window.rs  workspaces.rs
src/ui/hotspot/: cursor_poller.rs  hotspot_windows.rs  mod.rs
tests/: print_config.rs
tests/integration/: sway_config  test_runner.sh
